--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,7 +4,7 @@
   <div class="flex justify-between items-center">
     <div>
       <div class="flex items-center space-x-2 mb-2">
-        <%= link_to projects_path, class: "text-gray-500 hover:text-gray-700" do %>
+        <%= link_to dashboard_path, class: "text-gray-500 hover:text-gray-700" do %>
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
           </svg>
